--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@
     position: absolute;
     top: 70% ;
     left: 40%;
+    transform: rotate(180deg);
+    transition: transform 0.5s;
+    cursor: pointer;
 }
 
 .text-overlay {
